Fix issue with datepicker dropdown hidden behind modals (task #4027)

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -2,4 +2,11 @@
     padding-bottom: 10px;
 }
 
+/*
+    Fix for datepicker hidding behind modals.
+    We can use zIndexOffset option, once cakephp-adminlte-theme plugin updates to the latest version of the library
+    @link http://bootstrap-datepicker.readthedocs.io/en/stable/options.html#zindexoffset
+*/
+.datepicker {
+    z-index: 1060 !important;
 }
